add scss, rename Nav to NavBar, move datas to json file, custom route for testimonials

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "node-sass": "^4.0.0",
+    "sass-loader": "^4.0.2",
     "vue": "^2.1.0",
     "vue-head": "^2.0.10",
     "vue-router": "^2.1.1",
@@ -50,7 +52,7 @@
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
-    "webpack": "^1.13.2",
+    "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1"
